Added barebones functional static defender logic so that it should work and gave it a test run.
Also changed gitignore to ignore output file directories and added
placeholder stubs in the directories so that directory structure is
maintained. (Feel free to revert that if it breaks something)

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# For the time being, ignore the output directories
+# because they're likely to change as people fork and pull
+plots/
+logs/
+worlds/
+solutions/
+data/
