removed sys.path.appends and untracked output files from git

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,10 @@ logs/
 worlds/
 solutions/
 data/
+
+# but keep stubs to maintain directories
+!logs/.placeholder
+!plots/.placeholder
+!worlds/.placeholder
+!solutions/.placeholder
+!data/.placeholder
