Add config file parameters for defender strategy and range of the randomly-generated constant values in the GP tree. Move Saritas defender strategy from controller to game_state.

--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -31,7 +31,6 @@ defender_solution_file_path = solutions/defaultDefenderSolution.txt
 high_score_world_file_path = worlds/defaultHighScoreWorld.txt
 
 
-
 # ----------------------------------------------------------------------------
 [ccegp_options] # Options for Competitive Co-Evolutionary Genetic Programming Search. Don't change this header
 # ----------------------------------------------------------------------------
@@ -114,6 +113,15 @@ defender_parsimony_technique = size
 
 # Defender Parsimony pressure penalty coefficient
 defender_pppc = 0.5
+
+# Does the defender strategy evolve (ccegp) or follow the Saritas model?
+# Setting Sartias model allows debugging the attacker evolution
+# defender_strategy = ccegp
+defender_strategy = saritas
+
+# Bounds for randomly-generated constant values in the tree
+rand_constant_low = -10000.0
+rand_constant_high = 10000.0
 
 # Termination method
 # If choosing number_of_evals, enter that number in "num_fitness_evals_per_run" above
