Add config file option for game time step limit. Move config options to more appropriate sections/modules. Add methods for getting fitness from gameState instead of calculating it in ccegpStrategy. Temporarily set parsimony pressure to 0 for debugging.

--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -30,6 +30,14 @@ defender_solution_file_path = solutions/defaultDefenderSolution.txt
 # Highest score world file path
 high_score_world_file_path = worlds/defaultHighScoreWorld.txt
 
+# Does the defender strategy evolve (ccegp) or follow the Saritas model?
+# Setting Sartias model allows debugging the attacker evolution more cleanly
+# defender_strategy = ccegp
+defender_strategy = saritas
+
+# Time (# turns) limit for a game
+game_time_limit = 1000
+
 
 # ----------------------------------------------------------------------------
 [ccegp_options] # Options for Competitive Co-Evolutionary Genetic Programming Search. Don't change this header
@@ -41,10 +49,10 @@ attacker_mu = 100
 attacker_lambda = 50
 
 # Attacker Dmax for initialization
-attacker_dmax_init = 7
+attacker_dmax_init = 4
 
 # Attacker Dmax overall (post-initialization)
-attacker_dmax_overall = 9
+attacker_dmax_overall = 6
 
 # Attacker Parent selection method.
 # Options: fitness_proportional_selection, overselection
@@ -72,7 +80,9 @@ attacker_tournament_size_for_survival_selection = 10
 attacker_parsimony_technique = size
 
 # Attacker Parsimony pressure penalty coefficient
-attacker_pppc = 0.5
+# attacker_pppc = 0.5
+# TEMPORARILY set to 0 for debugging without parsimony pressure
+attacker_pppc = 0
 
 # Defender Population size
 defender_mu = 100
@@ -81,10 +91,10 @@ defender_mu = 100
 defender_lambda = 50
 
 # Defender Dmax for initialization
-defender_dmax_init = 7
+defender_dmax_init = 4
 
 # Defender Dmax overall (post-initialization)
-defender_dmax_overall = 9
+defender_dmax_overall = 6
 
 # Defender Parent selection method.
 # Options: fitness_proportional_selection, overselection
@@ -112,12 +122,9 @@ defender_tournament_size_for_survival_selection = 10
 defender_parsimony_technique = size
 
 # Defender Parsimony pressure penalty coefficient
-defender_pppc = 0.5
-
-# Does the defender strategy evolve (ccegp) or follow the Saritas model?
-# Setting Sartias model allows debugging the attacker evolution
-# defender_strategy = ccegp
-defender_strategy = saritas
+# defender_pppc = 0.5
+# TEMPORARILY set to 0 for debugging without parsimony pressure
+defender_pppc = 0
 
 # Bounds for randomly-generated constant values in the tree
 rand_constant_low = -10000.0
