Allow setting of which CA classifiers to use in the config file (default = none).

--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -38,6 +38,10 @@ defender_strategy = saritas
 # Time (# turns) limit for a game
 game_time_limit = 1000
 
+# Which continuous authentication classifiers are we turning on?
+ca_classifiers = []
+# ca_classifier = ['mouse']
+
 
 # ----------------------------------------------------------------------------
 [ccegp_options] # Options for Competitive Co-Evolutionary Genetic Programming Search. Don't change this header
