Changed omega to sum total user traffic observed by the attacker, so the attacker should lean heavily on the function W returning omega in their listen or attack decision. The total number of successful attacks by the attacker is now tracked as attacker_reward and is used as the attacker fitness function currently.
Moved defender decision to the last phase of the game since it's reactive to
either the user or attacker behavior. If we want to have it at the beginning we
could move it there (and adjust the decision to act on the previous round
affecting the current one), but to me it seems more intuitive to have it all
happen in order within a round.

Added config file parsing for the tunable game parameters.

--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -149,3 +149,39 @@ ciao_file_path_root = default
 # Log file for parsimony pressure data
 parsimony_log_file_path = data/defaultParsimonyLog.txt
 
+# ----------------------------------------------------------------------------
+[game_options] # Game parameters mostly as defined in the paper
+# ----------------------------------------------------------------------------
+
+# average user traffic arrivals per time slot ~Poisson(lambda_u)
+lambda_u = 1
+
+# user behavior distributed ~N(beta_u, sigma_u)
+beta_u = 100
+sigma_u = 3
+
+# CA false positive rate in static saritas strategy
+eta_u = 0.01
+
+# user reward for successful interaction (currently not used)
+nu_r = 0.1
+
+# probability of IDS detecting the attacker listening action
+# to be potentially turned into a concave function delta of m, a cost investment
+# into the IDS, with delta(0) = 0 and delta(m) = 1 as m -> inf, but that's if we
+# want to incorporate the cost investment into the strategy of the defender
+delta_l = 0.1
+
+# probability of IDS detecting the attacker attack action
+delta_a = 0.2
+
+# probability that the state transitions from blocked in time t to unblocked in
+# time t + 1
+q = 0.7
+
+# attacker learning rate
+gamma = 0.1
+
+# not yet implemented:
+# m := cost of operating IDS (see notes for delta_l)
+# C_a := attacker cost of compromising system
