move the game options I added previously to the game_options section of the config file

--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -6,10 +6,8 @@
 # random_seed = 1606103470501
 
 # Search strategy
-# Options: random, hillclimb, gp, ccegp
-# strategy = random
-# strategy = hillclimb
-# strategy = gp
+# Options could include: random, hillclimb, gp, ccegp
+# but for now it's only ccegp
 strategy = ccegp
 
 # Number of runs per experiment
@@ -29,18 +27,6 @@ defender_solution_file_path = solutions/defaultDefenderSolution.txt
 
 # Highest score world file path
 high_score_world_file_path = worlds/defaultHighScoreWorld.txt
-
-# Does the defender strategy evolve (ccegp) or follow the Saritas model?
-# Setting Sartias model allows debugging the attacker evolution more cleanly
-# defender_strategy = ccegp
-defender_strategy = saritas
-
-# Time (# turns) limit for a game
-game_time_limit = 1000
-
-# Which continuous authentication classifiers are we turning on?
-ca_classifiers = []
-# ca_classifier = ['mouse']
 
 
 # ----------------------------------------------------------------------------
@@ -149,9 +135,22 @@ ciao_file_path_root = default
 # Log file for parsimony pressure data
 parsimony_log_file_path = data/defaultParsimonyLog.txt
 
+
 # ----------------------------------------------------------------------------
-[game_options] # Game parameters mostly as defined in the paper
+[game_options] # Game parameters mostly as defined in the paper.  Don't change this header
 # ----------------------------------------------------------------------------
+
+# Does the defender strategy evolve (ccegp) or follow the Saritas model?
+# Setting Sartias model allows debugging the attacker evolution more cleanly
+defender_strategy = saritas
+# defender_strategy = ccegp
+
+# Time (# turns) limit for a game
+game_time_limit = 1000
+
+# Which continuous authentication classifiers are we turning on?
+ca_classifiers = []
+# ca_classifier = ['mouse']
 
 # average user traffic arrivals per time slot ~Poisson(lambda_u)
 lambda_u = 1
