--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -22,12 +22,24 @@ log_file_path = logs/default.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/defaultAttackerSolution.txt
 
+# Attacker Solution png file path
+attacker_solution_png_path = solutions/defaultAttackerSolution.txt
+
 # Defender Solution file path
 defender_solution_file_path = solutions/defaultDefenderSolution.txt
+
+# Defender Solution png file path
+defender_solution_png_path = solutions/defaultDefenderSolution.txt
 
 # Highest score world file path
 high_score_world_file_path = worlds/defaultHighScoreWorld.txt
 
+# If yes, render solutions to defender_solution_png_path with graphviz
+render_solutions = yes
+
+# If yes (and render_solutions is set), open rendered solutions after the experiment
+attacker_open_png = yes
+defender_open_png = no
 
 # ----------------------------------------------------------------------------
 [ccegp_options] # Options for Competitive Co-Evolutionary Genetic Programming Search. Don't change this header
