--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -14,7 +14,7 @@ strategy = ccegp
 num_runs_per_experiment = 2
 
 # Number of fitness evals per run (unless strategy overrides it)
-num_fitness_evals_per_run = 1000
+num_fitness_evals_per_run = 5000
 
 # Log file path
 log_file_path = logs/default.txt
@@ -23,13 +23,13 @@ log_file_path = logs/default.txt
 attacker_solution_file_path = solutions/defaultAttackerSolution.txt
 
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/defaultAttackerSolution.txt
+attacker_solution_png_path = solutions/defaultAttackerSolution.dot
 
 # Defender Solution file path
 defender_solution_file_path = solutions/defaultDefenderSolution.txt
 
 # Defender Solution png file path
-defender_solution_png_path = solutions/defaultDefenderSolution.txt
+defender_solution_png_path = solutions/defaultDefenderSolution.dot
 
 # Highest score world file path
 high_score_world_file_path = worlds/defaultHighScoreWorld.txt
@@ -38,7 +38,7 @@ high_score_world_file_path = worlds/defaultHighScoreWorld.txt
 render_solutions = yes
 
 # If yes (and render_solutions is set), open rendered solutions after the experiment
-attacker_open_png = yes
+attacker_open_png = no
 defender_open_png = no
 
 # ----------------------------------------------------------------------------
@@ -84,7 +84,7 @@ attacker_parsimony_technique = size
 # Attacker Parsimony pressure penalty coefficient
 # attacker_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-attacker_pppc = 0
+attacker_pppc = 0.01
 
 # Defender Population size
 defender_mu = 100
@@ -126,7 +126,7 @@ defender_parsimony_technique = size
 # Defender Parsimony pressure penalty coefficient
 # defender_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-defender_pppc = 0
+defender_pppc = 0.01
 
 # Termination method
 # If choosing number_of_evals, enter that number in "num_fitness_evals_per_run" above
