forgot to add config file additions

--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -37,6 +37,9 @@ high_score_world_file_path = worlds/defaultHighScoreWorld.txt
 # If yes, render solutions to defender_solution_png_path with graphviz
 render_solutions = yes
 
+# If yes, print the dot files of the attacker and defender at the end of each run
+print_dots = no
+
 # If yes (and render_solutions is set), open rendered solutions after the experiment
 attacker_open_png = no
 defender_open_png = no
@@ -188,6 +191,9 @@ q = 0.7
 
 # attacker learning rate
 gamma = 0.1
+
+# attacker reward discount factor
+rho = 0.98
 
 # not yet implemented:
 # m := cost of operating IDS (see notes for delta_l)
