bug fix reading gen_evals parameter

--- a/configs/sandbox.cfg
+++ b/configs/sandbox.cfg
@@ -14,7 +14,7 @@ strategy = ccegp
 num_runs_per_experiment = 1
 
 # Number of fitness evals per run (unless strategy overrides it)
-num_fitness_evals_per_run = 5000
+num_fitness_evals_per_run = 300000
 
 # Log file path
 log_file_path = logs/sandbox.txt
@@ -48,8 +48,8 @@ defender_open_png = no
 [ccegp_options] # Options for Competitive Co-Evolutionary Genetic Programming Search. Don't change this header
 # ----------------------------------------------------------------------------
 # How are generations evaluated? one_vs_one or all_vs_all
-gen_evals = one_vs_one
-# gen_evals = all_vs_all
+# gen_evals = one_vs_one
+gen_evals = all_vs_all
 
 # Attacker Population size
 attacker_mu = 100
