- Changed defender evolution functions to look at behavior in a very, ummm.. roundabout way. - Added "IDLess" mode where the defender blocking the attacker ends the game and the IDS only functions when the attacker listens - Added a separate ti_testing.cfg config file trying to tune a ccegp strategy

--- a/configs/ti_testing.cfg
+++ b/configs/ti_testing.cfg
@@ -157,8 +157,8 @@ parsimony_log_file_path = data/defaultParsimonyLog.txt
 
 # Does the defender strategy evolve (ccegp) or follow the Saritas model?
 # Setting Sartias model allows debugging the attacker evolution more cleanly
-defender_strategy = saritas
-# defender_strategy = ccegp
+#defender_strategy = saritas
+defender_strategy = ccegp
 
 # Time (# turns) limit for a game
 game_time_limit = 1000
@@ -200,7 +200,7 @@ gamma = 0.1
 rho = 0.98
 
 # scalar applied to successful user traffic rewarded to defender
-user_bonus = 1
+user_bonus = 0.07
 
 # scalar applied to successful attacks penalized from defender
 attacker_penalty = 1
@@ -208,4 +208,4 @@ attacker_penalty = 1
 # If no, we end the game when the IDS detects a user attack
 # if yes, the IDS only functions for listening, and we end when the defender
 # blocks after the attacker attacks.
-IDLess = no
+IDLess = yes
