--- a/configs/sandbox.cfg
+++ b/configs/sandbox.cfg
@@ -11,10 +11,10 @@
 strategy = ccegp
 
 # Number of runs per experiment
-num_runs_per_experiment = 1
+num_runs_per_experiment = 30
 
 # Number of fitness evals per run (unless strategy overrides it)
-num_fitness_evals_per_run = 300000
+num_fitness_evals_per_run = 10000
 
 # Log file path
 log_file_path = logs/sandbox.txt
@@ -48,8 +48,8 @@ defender_open_png = no
 [ccegp_options] # Options for Competitive Co-Evolutionary Genetic Programming Search. Don't change this header
 # ----------------------------------------------------------------------------
 # How are generations evaluated? one_vs_one or all_vs_all
-# gen_evals = one_vs_one
-gen_evals = all_vs_all
+gen_evals = one_vs_one
+# gen_evals = all_vs_all
 
 # Attacker Population size
 attacker_mu = 100
@@ -91,7 +91,7 @@ attacker_parsimony_technique = size
 # Attacker Parsimony pressure penalty coefficient
 # attacker_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-attacker_pppc = 0.0
+attacker_pppc = 0.001
 
 # Defender Population size
 defender_mu = 100
@@ -133,7 +133,7 @@ defender_parsimony_technique = size
 # Defender Parsimony pressure penalty coefficient
 # defender_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-defender_pppc = 0.0
+defender_pppc = 0.001
 
 # Termination method
 # If choosing number_of_evals, enter that number in "num_fitness_evals_per_run" above
