changed default config over to CCEGP strategy and added config "scenarios"

--- a/configs/f.cfg
+++ b/configs/f.cfg
@@ -208,4 +208,4 @@ attacker_penalty = 1
 # If no, we end the game when the IDS detects a user attack
 # if yes, the IDS only functions for listening, and we end when the defender
 # blocks after the attacker attacks.
-IDLess = no
+IDLess = yes
