give output files distinct filenames

--- a/configs/b.cfg
+++ b/configs/b.cfg
@@ -17,22 +17,22 @@ num_runs_per_experiment = 2
 num_fitness_evals_per_run = 5000
 
 # Log file path
-log_file_path = logs/default.txt
+log_file_path = logs/cfgb.txt
 
 # Attacker Solution file path
-attacker_solution_file_path = solutions/defaultAttackerSolution.txt
+attacker_solution_file_path = solutions/cfgbAttackerSolution.txt
 
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/defaultAttackerSolution.dot
+attacker_solution_png_path = solutions/cfgbAttackerSolution.dot
 
 # Defender Solution file path
-defender_solution_file_path = solutions/defaultDefenderSolution.txt
+defender_solution_file_path = solutions/cfgbDefenderSolution.txt
 
 # Defender Solution png file path
-defender_solution_png_path = solutions/defaultDefenderSolution.dot
+defender_solution_png_path = solutions/cfgbDefenderSolution.dot
 
 # Highest score world file path
-high_score_world_file_path = worlds/defaultHighScoreWorld.txt
+high_score_world_file_path = worlds/cfgbHighScoreWorld.txt
 
 # If yes, render solutions to defender_solution_png_path with graphviz
 render_solutions = no
@@ -145,10 +145,10 @@ termination = number_of_evals
 n_for_convergence = 100
 
 # Root filename for CIAO data and plot files
-ciao_file_path_root = default
+ciao_file_path_root = cfgb
 
 # Log file for parsimony pressure data
-parsimony_log_file_path = data/defaultParsimonyLog.txt
+parsimony_log_file_path = data/cfgbParsimonyLog.txt
 
 
 # ----------------------------------------------------------------------------
