--- a/configs/f.cfg
+++ b/configs/f.cfg
@@ -11,10 +11,10 @@
 strategy = ccegp
 
 # Number of runs per experiment
-num_runs_per_experiment = 2
+num_runs_per_experiment = 30
 
 # Number of fitness evals per run (unless strategy overrides it)
-num_fitness_evals_per_run = 5000
+num_fitness_evals_per_run = 10000
 
 # Log file path
 log_file_path = logs/cfgf.txt
@@ -22,14 +22,20 @@ log_file_path = logs/cfgf.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/cfgfAttackerSolution.txt
 
+# Attacker Solution dot file path
+attacker_solution_dot_path = solutions/cfgfAttackerSolution.dot
+
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/cfgfAttackerSolution.dot
+attacker_solution_png_path = solutions/cfgfAttackerSolution.png
 
 # Defender Solution file path
 defender_solution_file_path = solutions/cfgfDefenderSolution.txt
 
+# Defender Solution dot file path
+defender_solution_dot_path = solutions/cfgfDefenderSolution.dot
+
 # Defender Solution png file path
-defender_solution_png_path = solutions/cfgfDefenderSolution.dot
+defender_solution_png_path = solutions/cfgfDefenderSolution.png
 
 # Highest score world file path
 high_score_world_file_path = worlds/cfgfHighScoreWorld.txt
@@ -58,10 +64,10 @@ attacker_mu = 100
 attacker_lambda = 50
 
 # Attacker Dmax for initialization
-attacker_dmax_init = 4
+attacker_dmax_init = 7
 
 # Attacker Dmax overall (post-initialization)
-attacker_dmax_overall = 6
+attacker_dmax_overall = 9
 
 # Attacker Parent selection method.
 # Options: fitness_proportional_selection, overselection
@@ -91,7 +97,7 @@ attacker_parsimony_technique = size
 # Attacker Parsimony pressure penalty coefficient
 # attacker_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-attacker_pppc = 0.01
+attacker_pppc = 0.001
 
 # Defender Population size
 defender_mu = 100
@@ -100,10 +106,10 @@ defender_mu = 100
 defender_lambda = 50
 
 # Defender Dmax for initialization
-defender_dmax_init = 4
+defender_dmax_init = 7
 
 # Defender Dmax overall (post-initialization)
-defender_dmax_overall = 6
+defender_dmax_overall = 9
 
 # Defender Parent selection method.
 # Options: fitness_proportional_selection, overselection
@@ -133,7 +139,7 @@ defender_parsimony_technique = size
 # Defender Parsimony pressure penalty coefficient
 # defender_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-defender_pppc = 0.01
+defender_pppc = 0.001
 
 # Termination method
 # If choosing number_of_evals, enter that number in "num_fitness_evals_per_run" above
