fix my mistakes in cfgs

--- a/configs/a.cfg
+++ b/configs/a.cfg
@@ -22,14 +22,20 @@ log_file_path = logs/cfga.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/cfgaAttackerSolution.txt
 
+# Attacker Solution dot file path
+attacker_solution_dot_path = solutions/cfgaAttackerSolution.dot
+
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/cfgaAttackerSolution.dot
+attacker_solution_png_path = solutions/cfgaAttackerSolution.png
 
 # Defender Solution file path
 defender_solution_file_path = solutions/cfgaDefenderSolution.txt
 
+# Defender Solution dot file path
+defender_solution_dot_path = solutions/cfgaDefenderSolution.dot
+
 # Defender Solution png file path
-defender_solution_png_path = solutions/cfgaDefenderSolution.dot
+defender_solution_png_path = solutions/cfgaDefenderSolution.png
 
 # Highest score world file path
 high_score_world_file_path = worlds/cfgaHighScoreWorld.txt
