--- a/configs/b.cfg
+++ b/configs/b.cfg
@@ -22,14 +22,20 @@ log_file_path = logs/cfgb.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/cfgbAttackerSolution.txt
 
+# Attacker Solution dot file path
+attacker_solution_dot_path = solutions/cfgbAttackerSolution.dot
+
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/cfgbAttackerSolution.dot
+attacker_solution_png_path = solutions/cfgbAttackerSolution.png
 
 # Defender Solution file path
 defender_solution_file_path = solutions/cfgbDefenderSolution.txt
 
+# Defender Solution dot file path
+defender_solution_dot_path = solutions/cfgbDefenderSolution.dot
+
 # Defender Solution png file path
-defender_solution_png_path = solutions/cfgbDefenderSolution.dot
+defender_solution_png_path = solutions/cfgbDefenderSolution.png
 
 # Highest score world file path
 high_score_world_file_path = worlds/cfgbHighScoreWorld.txt
