--- a/configs/c.cfg
+++ b/configs/c.cfg
@@ -22,14 +22,20 @@ log_file_path = logs/cfgc.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/cfgcAttackerSolution.txt
 
+# Attacker Solution dot file path
+attacker_solution_dot_path = solutions/cfgcAttackerSolution.dot
+
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/cfgcAttackerSolution.dot
+attacker_solution_png_path = solutions/cfgcAttackerSolution.png
 
 # Defender Solution file path
 defender_solution_file_path = solutions/cfgcDefenderSolution.txt
 
+# Defender Solution dot file path
+defender_solution_dot_path = solutions/cfgcDefenderSolution.dot
+
 # Defender Solution png file path
-defender_solution_png_path = solutions/cfgcDefenderSolution.dot
+defender_solution_png_path = solutions/cfgcDefenderSolution.png
 
 # Highest score world file path
 high_score_world_file_path = worlds/cfgcHighScoreWorld.txt
