--- a/configs/d.cfg
+++ b/configs/d.cfg
@@ -22,14 +22,20 @@ log_file_path = logs/cfgd.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/cfgdAttackerSolution.txt
 
+# Attacker Solution dot file path
+attacker_solution_dot_path = solutions/cfgdAttackerSolution.dot
+
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/cfgdAttackerSolution.dot
+attacker_solution_png_path = solutions/cfgdAttackerSolution.png
 
 # Defender Solution file path
 defender_solution_file_path = solutions/cfgdDefenderSolution.txt
 
+# Defender Solution dot file path
+defender_solution_dot_path = solutions/cfgdDefenderSolution.dot
+
 # Defender Solution png file path
-defender_solution_png_path = solutions/cfgdDefenderSolution.dot
+defender_solution_png_path = solutions/cfgdDefenderSolution.png
 
 # Highest score world file path
 high_score_world_file_path = worlds/cfgdHighScoreWorld.txt
