--- a/configs/e.cfg
+++ b/configs/e.cfg
@@ -22,14 +22,20 @@ log_file_path = logs/cfge.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/cfgeAttackerSolution.txt
 
+# Attacker Solution dot file path
+attacker_solution_dot_path = solutions/cfgeAttackerSolution.dot
+
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/cfgeAttackerSolution.dot
+attacker_solution_png_path = solutions/cfgeAttackerSolution.png
 
 # Defender Solution file path
 defender_solution_file_path = solutions/cfgeDefenderSolution.txt
 
+# Defender Solution dot file path
+defender_solution_dot_path = solutions/cfgeDefenderSolution.dot
+
 # Defender Solution png file path
-defender_solution_png_path = solutions/cfgeDefenderSolution.dot
+defender_solution_png_path = solutions/cfgeDefenderSolution.png
 
 # Highest score world file path
 high_score_world_file_path = worlds/cfgeHighScoreWorld.txt
