--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -11,10 +11,10 @@
 strategy = ccegp
 
 # Number of runs per experiment
-num_runs_per_experiment = 2
+num_runs_per_experiment = 3
 
 # Number of fitness evals per run (unless strategy overrides it)
-num_fitness_evals_per_run = 5000
+num_fitness_evals_per_run = 2000
 
 # Log file path
 log_file_path = logs/default.txt
@@ -22,14 +22,20 @@ log_file_path = logs/default.txt
 # Attacker Solution file path
 attacker_solution_file_path = solutions/defaultAttackerSolution.txt
 
+# Attacker Solution dot file path
+attacker_solution_dot_path = solutions/defaultAttackerSolution.dot
+
 # Attacker Solution png file path
-attacker_solution_png_path = solutions/defaultAttackerSolution.dot
+attacker_solution_png_path = solutions/defaultAttackerSolution.png
 
 # Defender Solution file path
 defender_solution_file_path = solutions/defaultDefenderSolution.txt
 
+# Defender Solution dot file path
+defender_solution_dot_path = solutions/defaultDefenderSolution.dot
+
 # Defender Solution png file path
-defender_solution_png_path = solutions/defaultDefenderSolution.dot
+defender_solution_png_path = solutions/defaultDefenderSolution.png
 
 # Highest score world file path
 high_score_world_file_path = worlds/defaultHighScoreWorld.txt
@@ -58,10 +64,10 @@ attacker_mu = 100
 attacker_lambda = 50
 
 # Attacker Dmax for initialization
-attacker_dmax_init = 4
+attacker_dmax_init = 7
 
 # Attacker Dmax overall (post-initialization)
-attacker_dmax_overall = 6
+attacker_dmax_overall = 9
 
 # Attacker Parent selection method.
 # Options: fitness_proportional_selection, overselection
@@ -77,8 +83,8 @@ attacker_p_m = 0.05
 
 # Attacker Survival selection method.
 # Options: truncation, k_tournament_without_replacement
-attacker_survival_selection = truncation
-# attacker_survival_selection = k_tournament_without_replacement
+# attacker_survival_selection = truncation
+attacker_survival_selection = k_tournament_without_replacement
 
 # AttackerTournament size for survival selection, if using k-tournament
 attacker_tournament_size_for_survival_selection = 10
@@ -91,7 +97,7 @@ attacker_parsimony_technique = size
 # Attacker Parsimony pressure penalty coefficient
 # attacker_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-attacker_pppc = 0.01
+attacker_pppc = 0.001
 
 # Defender Population size
 defender_mu = 100
@@ -100,10 +106,10 @@ defender_mu = 100
 defender_lambda = 50
 
 # Defender Dmax for initialization
-defender_dmax_init = 4
+defender_dmax_init = 7
 
 # Defender Dmax overall (post-initialization)
-defender_dmax_overall = 6
+defender_dmax_overall = 9
 
 # Defender Parent selection method.
 # Options: fitness_proportional_selection, overselection
@@ -119,8 +125,8 @@ defender_p_m = 0.05
 
 # Defender Survival selection method.
 # Options: truncation, k_tournament_without_replacement
-defender_survival_selection = truncation
-# defender_survival_selection = k_tournament_without_replacement
+# defender_survival_selection = truncation
+defender_survival_selection = k_tournament_without_replacement
 
 # Defender Tournament size for survival selection, if using k-tournament
 defender_tournament_size_for_survival_selection = 10
@@ -133,7 +139,7 @@ defender_parsimony_technique = size
 # Defender Parsimony pressure penalty coefficient
 # defender_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-defender_pppc = 0.01
+defender_pppc = 0
 
 # Termination method
 # If choosing number_of_evals, enter that number in "num_fitness_evals_per_run" above
@@ -168,11 +174,11 @@ ca_classifiers = []
 # ca_classifier = ['mouse']
 
 # average user traffic arrivals per time slot ~Poisson(lambda_u)
-lambda_u = 1
+lambda_u = 3
 
 # user behavior distributed ~N(beta_u, sigma_u)
 beta_u = 100
-sigma_u = 3
+sigma_u = 10
 
 # CA false positive rate in static saritas strategy
 eta_u = 0.01
@@ -191,7 +197,7 @@ delta_a = 0.2
 
 # probability that the state transitions from blocked in time t to unblocked in
 # time t + 1
-q = 0.7
+q = 0.85
 
 # attacker learning rate
 gamma = 0.1
