--- a/configs/f.cfg
+++ b/configs/f.cfg
@@ -14,7 +14,7 @@ strategy = ccegp
 num_runs_per_experiment = 30
 
 # Number of fitness evals per run (unless strategy overrides it)
-num_fitness_evals_per_run = 10000
+num_fitness_evals_per_run = 4000
 
 # Log file path
 log_file_path = logs/cfgf.txt
@@ -55,7 +55,7 @@ defender_open_png = no
 # ----------------------------------------------------------------------------
 # How are generations evaluated? one_vs_one or all_vs_all
 gen_evals = one_vs_one
-# gen_evals = all_vs_all
+#gen_evals = all_vs_all
 
 # Attacker Population size
 attacker_mu = 100
@@ -83,8 +83,8 @@ attacker_p_m = 0.05
 
 # Attacker Survival selection method.
 # Options: truncation, k_tournament_without_replacement
-attacker_survival_selection = truncation
-# attacker_survival_selection = k_tournament_without_replacement
+# attacker_survival_selection = truncation
+attacker_survival_selection = k_tournament_without_replacement
 
 # AttackerTournament size for survival selection, if using k-tournament
 attacker_tournament_size_for_survival_selection = 10
@@ -125,8 +125,8 @@ defender_p_m = 0.05
 
 # Defender Survival selection method.
 # Options: truncation, k_tournament_without_replacement
-defender_survival_selection = truncation
-# defender_survival_selection = k_tournament_without_replacement
+# defender_survival_selection = truncation
+defender_survival_selection = k_tournament_without_replacement
 
 # Defender Tournament size for survival selection, if using k-tournament
 defender_tournament_size_for_survival_selection = 10
@@ -139,7 +139,7 @@ defender_parsimony_technique = size
 # Defender Parsimony pressure penalty coefficient
 # defender_pppc = 0.5
 # TEMPORARILY set to 0 for debugging without parsimony pressure
-defender_pppc = 0.001
+defender_pppc = 0.2
 
 # Termination method
 # If choosing number_of_evals, enter that number in "num_fitness_evals_per_run" above
@@ -163,8 +163,8 @@ parsimony_log_file_path = data/cfgfParsimonyLog.txt
 
 # Does the defender strategy evolve (ccegp) or follow the Saritas model?
 # Setting Sartias model allows debugging the attacker evolution more cleanly
-# defender_strategy = saritas
-defender_strategy = ccegp
+defender_strategy = saritas
+# defender_strategy = ccegp
 
 # Time (# turns) limit for a game
 game_time_limit = 1000
@@ -174,7 +174,7 @@ ca_classifiers = []
 # ca_classifier = ['mouse']
 
 # average user traffic arrivals per time slot ~Poisson(lambda_u)
-lambda_u = 1
+lambda_u = 3
 
 # user behavior distributed ~N(beta_u, sigma_u)
 beta_u = 100
@@ -190,14 +190,14 @@ nu_r = 0.1
 # to be potentially turned into a concave function delta of m, a cost investment
 # into the IDS, with delta(0) = 0 and delta(m) = 1 as m -> inf, but that's if we
 # want to incorporate the cost investment into the strategy of the defender
-delta_l = 0.1
+delta_l = 0.01
 
 # probability of IDS detecting the attacker attack action
-delta_a = 0.2
+delta_a = 0.3
 
 # probability that the state transitions from blocked in time t to unblocked in
 # time t + 1
-q = 0.7
+q = 0.6
 
 # attacker learning rate
 gamma = 0.1
@@ -214,4 +214,4 @@ attacker_penalty = 1
 # If no, we end the game when the IDS detects a user attack
 # if yes, the IDS only functions for listening, and we end when the defender
 # blocks after the attacker attacks.
-IDLess = yes
+IDLess = no
